--- a/project-reports.html
+++ b/project-reports.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2013-12-22</span>
-                  &nbsp;| <span id="projectVersion">Version: 1.5</span>
+                  &nbsp;| <span id="projectVersion">Version: 1.6-SNAPSHOT</span>
                       </div>
             <div class="xright">                    <a href="./" title="API-FanartTV">API-FanartTV</a>
               
