--- a/dependencies.html
+++ b/dependencies.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-10-08</span>
-                  &nbsp;| <span id="projectVersion">Version: 3.1-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 3.0</span>
                       </div>
             <div class="xright">                    <a href="./" title="API-FanartTV">API-FanartTV</a>
               
@@ -219,7 +219,7 @@
 <div class="section">
 <h3>Dependency Tree<a name="Dependency_Tree"></a></h3>
 <ul>
-<li>com.omertron:fanarttvapi:jar:3.1-SNAPSHOT <img id="_1268427544" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_477624311', '_1268427544' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_477624311" style="display:none">
+<li>com.omertron:fanarttvapi:jar:3.0 <img id="_1268301997" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_979089850', '_1268301997' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_979089850" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>API-FanartTV</th></tr>
@@ -229,7 +229,7 @@
 <p><b>URL: </b><a class="externalLink" href="https://github.com/Omertron/api-fanarttv">https://github.com/Omertron/api-fanarttv</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">GNU General Public License v3+</a></p></td></tr></table></div>
 <ul>
-<li>commons-codec:commons-codec:jar:1.9 (compile) <img id="_1471107163" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_8281984', '_1471107163' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_8281984" style="display:none">
+<li>commons-codec:commons-codec:jar:1.9 (compile) <img id="_1821892049" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1724095989', '_1821892049' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1724095989" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Apache Commons Codec</th></tr>
@@ -241,7 +241,7 @@
      collection of phonetic encoding utilities.</p>
 <p><b>URL: </b><a class="externalLink" href="http://commons.apache.org/proper/commons-codec/">http://commons.apache.org/proper/commons-codec/</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p></td></tr></table></div></li>
-<li>org.apache.commons:commons-lang3:jar:3.3.2 (compile) <img id="_302273092" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1641307013', '_302273092' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1641307013" style="display:none">
+<li>org.apache.commons:commons-lang3:jar:3.3.2 (compile) <img id="_1628566064" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_209880849', '_1628566064' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_209880849" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Apache Commons Lang</th></tr>
@@ -252,7 +252,7 @@
   standard as to justify existence in java.lang.</p>
 <p><b>URL: </b><a class="externalLink" href="http://commons.apache.org/proper/commons-lang/">http://commons.apache.org/proper/commons-lang/</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p></td></tr></table></div></li>
-<li>junit:junit:jar:4.12-beta-2 (test) <img id="_1680382983" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_684163596', '_1680382983' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_684163596" style="display:none">
+<li>junit:junit:jar:4.12-beta-2 (test) <img id="_1370950746" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_518272631', '_1370950746' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_518272631" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>JUnit</th></tr>
@@ -262,7 +262,7 @@
 <p><b>URL: </b><a class="externalLink" href="http://junit.org">http://junit.org</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License 1.0</a></p></td></tr></table></div>
 <ul>
-<li>org.hamcrest:hamcrest-core:jar:1.3 (test) <img id="_696744428" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1044905691', '_696744428' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1044905691" style="display:none">
+<li>org.hamcrest:hamcrest-core:jar:1.3 (test) <img id="_852308623" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_67659102', '_852308623' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_67659102" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Hamcrest Core</th></tr>
@@ -271,7 +271,7 @@
 <p><b>Description: </b>This is the core API of hamcrest matcher framework to be used by third-party framework providers. This includes the a foundation set of matcher implementations for common operations.</p>
 <p><b>URL: </b><a class="externalLink" href="https://github.com/hamcrest/JavaHamcrest/hamcrest-core">https://github.com/hamcrest/JavaHamcrest/hamcrest-core</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.opensource.org/licenses/bsd-license.php">New BSD License</a></p></td></tr></table></div></li></ul></li>
-<li>com.fasterxml.jackson.core:jackson-core:jar:2.4.2 (compile) <img id="_2114305828" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1335652675', '_2114305828' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1335652675" style="display:none">
+<li>com.fasterxml.jackson.core:jackson-core:jar:2.4.2 (compile) <img id="_1292869797" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_697915989', '_1292869797' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_697915989" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Jackson-core</th></tr>
@@ -280,7 +280,7 @@
 <p><b>Description: </b>Core Jackson abstractions, basic JSON streaming API implementation</p>
 <p><b>URL: </b><a class="externalLink" href="http://wiki.fasterxml.com/JacksonHome">http://wiki.fasterxml.com/JacksonHome</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p></td></tr></table></div></li>
-<li>com.fasterxml.jackson.core:jackson-annotations:jar:2.4.2 (compile) <img id="_1498344696" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1772237144', '_1498344696' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1772237144" style="display:none">
+<li>com.fasterxml.jackson.core:jackson-annotations:jar:2.4.2 (compile) <img id="_577411455" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1800784687', '_577411455' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1800784687" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Jackson-annotations</th></tr>
@@ -289,7 +289,7 @@
 <p><b>Description: </b>Core annotations used for value types, used by Jackson data binding package.</p>
 <p><b>URL: </b><a class="externalLink" href="http://wiki.fasterxml.com/JacksonHome">http://wiki.fasterxml.com/JacksonHome</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p></td></tr></table></div></li>
-<li>com.fasterxml.jackson.core:jackson-databind:jar:2.4.2 (compile) <img id="_1167024303" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1488869293', '_1167024303' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1488869293" style="display:none">
+<li>com.fasterxml.jackson.core:jackson-databind:jar:2.4.2 (compile) <img id="_1839747668" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_532478882', '_1839747668' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_532478882" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>jackson-databind</th></tr>
@@ -299,7 +299,7 @@
 <p><b>URL: </b><a class="externalLink" href="http://wiki.fasterxml.com/JacksonHome">http://wiki.fasterxml.com/JacksonHome</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p></td></tr></table></div>
 <ul>
-<li>com.fasterxml.jackson.core:jackson-core:jar:2.4.2 (compile) <img id="_32187693" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1990085118', '_32187693' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1990085118" style="display:none">
+<li>com.fasterxml.jackson.core:jackson-core:jar:2.4.2 (compile) <img id="_1051900146" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1151254444', '_1051900146' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1151254444" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Jackson-core</th></tr>
@@ -308,7 +308,7 @@
 <p><b>Description: </b>Core Jackson abstractions, basic JSON streaming API implementation</p>
 <p><b>URL: </b><a class="externalLink" href="http://wiki.fasterxml.com/JacksonHome">http://wiki.fasterxml.com/JacksonHome</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p></td></tr></table></div></li></ul></li>
-<li>org.slf4j:slf4j-api:jar:1.7.7 (compile) <img id="_1567000943" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_266868398', '_1567000943' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_266868398" style="display:none">
+<li>org.slf4j:slf4j-api:jar:1.7.7 (compile) <img id="_1851181680" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1016113261', '_1851181680' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1016113261" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>SLF4J API Module</th></tr>
@@ -317,7 +317,7 @@
 <p><b>Description: </b>The slf4j API</p>
 <p><b>URL: </b><a class="externalLink" href="http://www.slf4j.org">http://www.slf4j.org</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p></td></tr></table></div></li>
-<li>org.slf4j:slf4j-jdk14:jar:1.7.7 (test) <img id="_2139209277" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_2084542532', '_2139209277' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_2084542532" style="display:none">
+<li>org.slf4j:slf4j-jdk14:jar:1.7.7 (test) <img id="_1908918659" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_315264962', '_1908918659' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_315264962" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>SLF4J JDK14 Binding</th></tr>
@@ -327,7 +327,7 @@
 <p><b>URL: </b><a class="externalLink" href="http://www.slf4j.org">http://www.slf4j.org</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p></td></tr></table></div>
 <ul>
-<li>org.slf4j:slf4j-api:jar:1.7.7 (test) <img id="_2038285508" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1041505606', '_2038285508' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1041505606" style="display:none">
+<li>org.slf4j:slf4j-api:jar:1.7.7 (test) <img id="_1821772626" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_995877379', '_1821772626' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_995877379" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>SLF4J API Module</th></tr>
@@ -336,7 +336,7 @@
 <p><b>Description: </b>The slf4j API</p>
 <p><b>URL: </b><a class="externalLink" href="http://www.slf4j.org">http://www.slf4j.org</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.opensource.org/licenses/mit-license.php">MIT License</a></p></td></tr></table></div></li></ul></li>
-<li>org.yamj:api-common:jar:1.1 (compile) <img id="_740570552" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1160980593', '_740570552' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1160980593" style="display:none">
+<li>org.yamj:api-common:jar:1.1 (compile) <img id="_1282651095" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1688822980', '_1282651095' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1688822980" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>API-Common</th></tr>
@@ -346,7 +346,7 @@
 <p><b>URL: </b><a class="externalLink" href="https://github.com/YAMJ/api-common">https://github.com/YAMJ/api-common</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">GNU General Public License v3+</a></p></td></tr></table></div>
 <ul>
-<li>commons-dbcp:commons-dbcp:jar:1.4 (compile) <img id="_43520297" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_198748659', '_43520297' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_198748659" style="display:none">
+<li>commons-dbcp:commons-dbcp:jar:1.4 (compile) <img id="_12959388" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1083008980', '_12959388' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1083008980" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Commons DBCP</th></tr>
@@ -355,7 +355,7 @@
 <p><b>Description: </b>Commons Database Connection Pooling</p>
 <p><b>URL: </b><a class="externalLink" href="http://commons.apache.org/dbcp/">http://commons.apache.org/dbcp/</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p></td></tr></table></div></li>
-<li>commons-pool:commons-pool:jar:1.6 (compile) <img id="_1590554112" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1248513791', '_1590554112' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1248513791" style="display:none">
+<li>commons-pool:commons-pool:jar:1.6 (compile) <img id="_662399771" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1581023440', '_662399771' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1581023440" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Commons Pool</th></tr>
@@ -364,7 +364,7 @@
 <p><b>Description: </b>Commons Object Pooling Library</p>
 <p><b>URL: </b><a class="externalLink" href="http://commons.apache.org/pool/">http://commons.apache.org/pool/</a></p>
 <p><b>Project License: </b><a class="externalLink" href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a></p></td></tr></table></div></li>
-<li>org.apache.httpcomponents:httpclient:jar:4.2.6 (compile) <img id="_1974393685" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1608507632', '_1974393685' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1608507632" style="display:none">
+<li>org.apache.httpcomponents:httpclient:jar:4.2.6 (compile) <img id="_1705980547" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_823600686', '_1705980547' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_823600686" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Apache HttpClient</th></tr>
@@ -374,7 +374,7 @@
 <p><b>URL: </b><a class="externalLink" href="http://hc.apache.org/httpcomponents-client">http://hc.apache.org/httpcomponents-client</a></p>
 <p><b>Project License: </b><a href="LICENSE.txt">Apache License</a></p></td></tr></table></div>
 <ul>
-<li>org.apache.httpcomponents:httpcore:jar:4.2.5 (compile) <img id="_1352551361" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_694404558', '_1352551361' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_694404558" style="display:none">
+<li>org.apache.httpcomponents:httpcore:jar:4.2.5 (compile) <img id="_1274633454" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1148919634', '_1274633454' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1148919634" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Apache HttpCore</th></tr>
@@ -383,7 +383,7 @@
 <p><b>Description: </b>HttpComponents Core (blocking I/O)</p>
 <p><b>URL: </b><a class="externalLink" href="http://hc.apache.org/httpcomponents-core-ga">http://hc.apache.org/httpcomponents-core-ga</a></p>
 <p><b>Project License: </b><a href="LICENSE.txt">Apache License</a></p></td></tr></table></div></li>
-<li>commons-logging:commons-logging:jar:1.1.1 (compile) <img id="_218961599" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_1303961863', '_218961599' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_1303961863" style="display:none">
+<li>commons-logging:commons-logging:jar:1.1.1 (compile) <img id="_1363028901" src="./images/icon_info_sml.gif" alt="Information" onclick="toggleDependencyDetail( '_473234329', '_1363028901' );" style="cursor: pointer;vertical-align:text-bottom;"></img><div id="_473234329" style="display:none">
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Commons Logging</th></tr>
