--- a/project-reports.html
+++ b/project-reports.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-12-31</span>
-                  &nbsp;| <span id="projectVersion">Version: 3.1</span>
+                  &nbsp;| <span id="projectVersion">Version: 3.2-SNAPSHOT</span>
                       </div>
             <div class="xright">                    <a href="./" title="API-FanartTV">API-FanartTV</a>
               
