--- a/project-info.html
+++ b/project-info.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2015-01-02</span>
-                  &nbsp;| <span id="projectVersion">Version: 3.2-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 3.1.1</span>
                       </div>
             <div class="xright">                    <a href="./" title="API-FanartTV">API-FanartTV</a>
               
