--- a/project-summary.html
+++ b/project-summary.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2015-01-02</span>
-                  &nbsp;| <span id="projectVersion">Version: 3.2-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 3.1.1</span>
                       </div>
             <div class="xright">                    <a href="./" title="API-FanartTV">API-FanartTV</a>
               
@@ -114,7 +114,7 @@
 <td>fanarttvapi</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>3.2-SNAPSHOT</td></tr>
+<td>3.1.1</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>jar</td></tr></table></div></div>
